# playdraughts

./: README.md
src/: CMakeLists.txt  boardwidget.cpp  boardwidget.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
